Tweaked mentors section  and volunteering page

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/engramar.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Engramar.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Engramar Bollas</h4>
               <h5 class="text-muted">Director</h5>
               <p class="team-text">Engramar's raison d'etre is to serve. A believer of servant leadership. He is passionate in providing service excellence to customers and ensuring people, culture, processes and technology support the same initiative.
@@ -100,7 +100,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/tony.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Tony.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Tony Johnson</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Despite having a Degree in Prehistory and Archaeology, Tony has survived 30 years in various IT 
@@ -127,14 +127,10 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/promie_new.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Promie.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Promie Yutasane</h4>
               <h5 class="text-muted">Mentor</h5>
-              <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
-                He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
-                He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
-                Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors, 
-                Promie has introduced standardised processes around GitHub code submission among developers. He is also the chief envangelist of Vue JS in Code.Sydney.   
+              <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. He has a very strong focus on full stack development and currently using NodeJS, Express, TypeScript, MongoDB, and React. He is a part-time student at UNSW studying Masters of IT focusing on Software Engineering and E-Commerce Systems. Promie spends his spare time mentoring new programmers at Code.Sydney. As one of the pioneer mentors, Promie has introduced standardised processes around GitHub code submission among developers.
               </p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -150,7 +146,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/kevin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Kevin.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Kevin Foong</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
@@ -181,7 +177,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
           <div class="card h-100">
             <div class="card-body">
 
-              <img src="{{ url_for('static', filename='img/surya.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Surya.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Surya Setiyaputra</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Surya is a full-stack software developer with more than three-year professional experience with a previous life as a research scientist in Biophysics. He is a self-described ‘generalist’ with practical experience in setting up small businesses, personal finance, design, community building and tech startup in both Australia and Indonesia. Since mid-2019, Surya has been an active contributor to Free Code Camp Sydney meetups. As a self-taught developer, he is particularly interested in helping new coders who are interested in landing their entry role as a Junior Developer after going through the FreeCodeCamp full-stack curriculum. His current favourite web development stacks are Kotlin/Spring Boot, Ruby on Rails, Node, ReactJS and VueJS. In the near future, he aims to learn more SQL and functional programming. When he is not coding, Surya likes to read books about economics, anthropology, history and politics.</p>
@@ -200,7 +196,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/bin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Bin.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Bin Liu</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
@@ -219,7 +215,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
           <div class="card h-100">
 
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/june.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_June.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>June Kongyang</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
@@ -239,7 +235,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
           <div class="card h-100">
 
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/qj.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/Mentor_Qj.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
               <h4>Qj Stout-Spykers</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">
@@ -277,7 +273,7 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           <div class="col-lg-3 col-md-6">
             <div class="card h-100">
               <div class="card-body">
-                <img src="{{ url_for('static', filename='img/gabriel.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="{{ url_for('static', filename='img/Mentor_Gabriel.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
                 <h4>Gabriel Djan</h4>
                 <h5 class="text-muted">Mentor</h5>
                 <p class="team-text">
@@ -301,7 +297,7 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           <div class="col-lg-3 col-md-6">
             <div class="card h-100">
               <div class="card-body">
-                <img src="{{ url_for('static', filename='img/lillian.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="{{ url_for('static', filename='img/Mentor_Lillian.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
                 <h4>Lillian Luzinsky</h4>
                 <h5 class="text-muted">Mentor</h5>
                 <p class="team-text">
@@ -318,6 +314,46 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/Mentor_Stephen.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+                <h4>Stephen Corral</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">
+                  Stephen is a graduate of computer science in 2013 and currently taking a graduate certificate course at UTS on a part time basis. He completed the Free Code Camp web design certification and has exposure to React, Redux and Context API in volunteer projects and proof of concept initiatives in Code.Sydney. He is also familiar with C#/SQL Server and is interested in Linux. Stephen was the technical team lead of a successfully completed project for Dr. Lukas Carey's personal advocacy around convict criminology.                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://au.linkedin.com/in/stephen-melben-corral-73468b6b" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/Mentor_Jacin.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+                <h4>Jacin Yan</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">
+                  Jacin is an enthusiastic web developer who is seeking a new challenging career after many years of being in Civil/Structural Engineering. He found his greater passion in coding and programming on an occasion when he brushed on up his programming skills utilizing the APIs of Finite Element software and therefore he gained an IT diploma following this. Soon after the most recent graduation, he joined the CRM and website projects of PAACT, being the technical team lead with an emphasis on frontend development. His tech stack includes React.js, Redux, React-Query, react testing library, where he fully embraces the idea of functional programming that aligns with his analytical skills. On top of that, what makes him unique is he can also be found passionate about UI/UX design with his keen eye on aesthetics because of years of immersion in structural design and dealings with architects.                
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://au.linkedin.com/in/jacin-ji-yan" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+      
         </div>
       </div>
   
