--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -68,7 +68,7 @@
         <td>20210218</td>
         <td>2021 FEBRUARY</td>
         <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
-        <td>Client Expense Management App and Website Revamp</td>
+        <td>Client Expense Management Web App</td>
         <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
@@ -91,6 +91,13 @@
         <td><a href="https://talkingtimepodcast.com.au/" target="_blank">Talking Time Podcast</a></td>
         <td>Website to showcase podcast on Convict Criminology</td>
         <td style="color:rgb(61, 134, 59)">Completed</td>
+      </tr>
+      <tr>
+        <td>20210815</td>
+        <td>2021 AUGUST</td>
+        <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
+        <td>Website Revamp</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
   </tbody>
   <tfoot>
