--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202110</td>
+              <td>2021 OCTOBER</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_October_2021.pdf') }}" target="_blank">The Hexagon October 2021</a></td>
+            </tr>
+            <tr>
               <td>202109</td>
               <td>2021 SEPTEMBER</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_September_2021.pdf') }}" target="_blank">The Hexagon September 2021</a></td>
