Nov newsletter and Eisteddfod addition

--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -72,13 +72,6 @@
         <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
-        <td>20210304</td>
-        <td>2021 MARCH</td>
-        <td><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour Australia</a></td>
-        <td>Online Membership Portal</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
-      </tr>
-      <tr>
         <td>20210317</td>
         <td>2021 MARCH</td>
         <td><a href="https://www.lukascarey.com.au/" target="_blank">Lukas Carey Advocacy on Convict Criminology</a></td>
@@ -99,7 +92,21 @@
         <td>Website Revamp</td>
         <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
-  </tbody>
+      <tr>
+        <td>20211001</td>
+        <td>2021 OCTOBER</td>
+        <td><a href="https://www.eisteddfodparramatta.org.au/" target="_blank">City of Parramatta Eisteddfod Society Inc.</a></td>
+        <td>Website Revamp</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+      </tr>
+      <tr>
+        <td>20211101</td>
+        <td>2021 NOVEMBER</td>
+        <td><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour Australia</a></td>
+        <td>Mentorship Portal</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+      </tr>    
+    </tbody>
   <tfoot>
     <tr>
       <th>Project ID</th>
