--- a/templates/merch.html
+++ b/templates/merch.html
@@ -18,9 +18,8 @@
         <div class="col-lg-12">
           <h4 style="font-family: Montserrat">All proceeds will go to the following:</h4>
           <ul style="font-family: Montserrat; font-size: 15px;">
-            <li>90% Community Fund</li>
-            <li>5% <a href="https://www.freecodecamp.org" target="_blank">Free Code Camp</a></li>
-            <li>2.5% Mentors Fund</li>
+            <li>92.5% Community Fund</li>
+            <li>5% Local Charity Fund</li>
             <li>2.5% Operating Expenses</li>
           </ul>
         </div>
