--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202201</td>
+              <td>2022 JANUARY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_January_2022.pdf') }}" target="_blank">The Hexagon January 2022</a></td>
+            </tr>
+            <tr>
               <td>202112</td>
               <td>2021 DECEMBER</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_December_2021.pdf') }}" target="_blank">The Hexagon December 2021</a></td>
