--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -51,13 +51,6 @@
         <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
-        <td>20210102</td>
-        <td>2021 JANUARY</td>
-        <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
-        <td>Referral Management System</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
-      </tr>
-      <tr>
         <td>20210103</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.ims.org.au/" target="_blank">Illawarra Multicultural Services</a></td>
@@ -90,14 +83,14 @@
         <td>2021 AUGUST</td>
         <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
         <td>Website Revamp</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20211001</td>
         <td>2021 OCTOBER</td>
         <td><a href="https://www.eisteddfodparramatta.org.au/" target="_blank">City of Parramatta Eisteddfod Society Inc.</a></td>
         <td>Website Revamp</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20211101</td>
