The Hexagon Feb 2022

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,44 +193,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <img src="{{ url_for('static', filename='img/Mentor_Bin.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
-              <h4>Bin Liu</h4>
-              <h5 class="text-muted">Mentor</h5>
-              <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://www.linkedin.com/in/bin-liu-308b841a/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-
-            <div class="card-body">
-              <img src="{{ url_for('static', filename='img/Mentor_June.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
-              <h4>June Kongyang</h4>
-              <h5 class="text-muted">Mentor</h5>
-              <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://au.linkedin.com/in/june-kongyang" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
 
@@ -240,8 +203,8 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">
                 Qj is a computer science graduate and achieved high distinctions in microprocessor systems, systems and database design, discrete mathematics and programming principles. His primary software development experience is in embedded systems, deep-learning and back-end engineering. Currently, he is constraining his focus to mastering full-stack web development, after which, he has his eye on studying project management.
-As a Code.Sydney volunteer, Qj has acted as a technical team lead and principal back-end engineer on the CodeSydney website rework and internal 'Strataly’ project respectively.
-Qj can usually be found deep in some obscure documentation or sharing his knowledge on the Code.Sydney Slack. In his past life, Qj was a professional musician and guitar tutor.
+        As a Code.Sydney volunteer, Qj has acted as a technical team lead and principal back-end engineer on the CodeSydney website rework and internal 'Strataly’ project respectively.
+        Qj can usually be found deep in some obscure documentation or sharing his knowledge on the Code.Sydney Slack. In his past life, Qj was a professional musician and guitar tutor.
               </p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -255,6 +218,48 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           </div>
         </div>
 
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/Mentor_Stephen.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+              <h4>Stephen Corral</h4>
+              <h5 class="text-muted">Mentor</h5>
+              <p class="team-text">
+                Stephen is a graduate of computer science in 2013 and currently taking a graduate certificate course at UTS on a part time basis. He completed the Free Code Camp web design certification and has exposure to React, Redux and Context API in volunteer projects and proof of concept initiatives in Code.Sydney. He is also familiar with C#/SQL Server and is interested in Linux. Stephen was the technical team lead of a successfully completed project for Dr. Lukas Carey's personal advocacy around convict criminology.                </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://au.linkedin.com/in/stephen-melben-corral-73468b6b" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/Mentor_Lillian.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+              <h4>Lillian Luzinsky</h4>
+              <h5 class="text-muted">Mentor</h5>
+              <p class="team-text">
+                Lillian is a versatile Designer and Creative Technologist, with a keen eye for clean and elegant design throughout all her projects. She possesses a wide range of skills, including UX/UI Design, Motion Graphics and Software Engineering. Lillian absolutely loves CSS and making things look great and user-friendly. Before transitioning into Front End Development, Lillian spent time as a Graphic Designer for property marketing and later shifted into freelancing, where she has been building her own business for 13 years providing high quality design services. Due to her diverse abilities, she is highly proficient in collaborating and communicating with cross-functional teams, and loves learning and refining her programming skills.
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://au.linkedin.com/in/lillian-luzinsky" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+
+        
       </div>
     </div>
 
@@ -269,6 +274,44 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
       <div class="container">
         <div class="row">
 
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/Mentor_Praveen.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+                <h4>Praveen Sequeira</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">
+                  Praveen is a seasoned, forward-looking Software Engineer with 15+ years background in creating and executing innovative software solutions to enhance business productivity. Highly experienced in designing, developing, testing, and implementing REST APIs between Openedge based systems and external applications.
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://au.linkedin.com/in/praveenat" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/Mentor_Paolo.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+                <h4>Paolo Garde</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">
+                  Paolo is a long-time startup veteran, having started at Uber in 2014, then moving on to Operations leadership roles at Australian startups FoodByUs and :Different. He recently decided to make a career change to the world of software engineering, ultimately transitioning into a software engineer role in December 2021. After joining Code.Sydney as a volunteer front-end developer for Project Migram, Paolo is currently leading a project to standardise and document our best practices on our very own Code.Sydney Playbook.                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://au.linkedin.com/in/paologarde" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>        
 
           <div class="col-lg-3 col-md-6">
             <div class="card h-100">
@@ -297,45 +340,6 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           <div class="col-lg-3 col-md-6">
             <div class="card h-100">
               <div class="card-body">
-                <img src="{{ url_for('static', filename='img/Mentor_Lillian.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
-                <h4>Lillian Luzinsky</h4>
-                <h5 class="text-muted">Mentor</h5>
-                <p class="team-text">
-                  Lillian is a versatile Designer and Creative Technologist, with a keen eye for clean and elegant design throughout all her projects. She possesses a wide range of skills, including UX/UI Design, Motion Graphics and Software Engineering. Lillian absolutely loves CSS and making things look great and user-friendly. Before transitioning into Front End Development, Lillian spent time as a Graphic Designer for property marketing and later shifted into freelancing, where she has been building her own business for 13 years providing high quality design services. Due to her diverse abilities, she is highly proficient in collaborating and communicating with cross-functional teams, and loves learning and refining her programming skills.
-                </p>
-                <div class="d-flex justify-content-center">
-                  <div class="p-4">
-                    <a href="https://au.linkedin.com/in/lillian-luzinsky" target="_blank">
-                      <i class="fab fa-linkedin"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="card h-100">
-              <div class="card-body">
-                <img src="{{ url_for('static', filename='img/Mentor_Stephen.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
-                <h4>Stephen Corral</h4>
-                <h5 class="text-muted">Mentor</h5>
-                <p class="team-text">
-                  Stephen is a graduate of computer science in 2013 and currently taking a graduate certificate course at UTS on a part time basis. He completed the Free Code Camp web design certification and has exposure to React, Redux and Context API in volunteer projects and proof of concept initiatives in Code.Sydney. He is also familiar with C#/SQL Server and is interested in Linux. Stephen was the technical team lead of a successfully completed project for Dr. Lukas Carey's personal advocacy around convict criminology.                </p>
-                <div class="d-flex justify-content-center">
-                  <div class="p-4">
-                    <a href="https://au.linkedin.com/in/stephen-melben-corral-73468b6b" target="_blank">
-                      <i class="fab fa-linkedin"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="card h-100">
-              <div class="card-body">
                 <img src="{{ url_for('static', filename='img/Mentor_Jacin.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
                 <h4>Jacin Yan</h4>
                 <h5 class="text-muted">Mentor</h5>
@@ -351,14 +355,67 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
                 </div>
               </div>
             </div>
-          </div>
-          
+          </div>  
       
         </div>
       </div>
   
     </section>
   
+
+
+    <!-- Mentors Section 4 -->
+    <div class="spacing"></div>    
+
+    <section id="authors" class="my-5 text-center bg-light">
+  
+      <div class="container">
+        <div class="row">
+      
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/Mentor_Bin.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+                <h4>Bin Liu</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://www.linkedin.com/in/bin-liu-308b841a/" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+  
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/Mentor_June.png') }}" alt="" class="img-fluid rounded-circle w-75 mb-3">
+                <h4>June Kongyang</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://au.linkedin.com/in/june-kongyang" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+  
+    </section>
+  
+
+
   <div class="spacing"></div>
 
   <!-- Friends -->
