--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -48,7 +48,7 @@
         <td>2020 MAY</td>
         <td>TasksTech</td>
         <td>Work Journal App for Electricians</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20210103</td>
@@ -62,7 +62,7 @@
         <td>2021 FEBRUARY</td>
         <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
         <td>Bespoke CRM</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20210317</td>
