The Odin Project Study Group

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -33,6 +33,9 @@
           <a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a>
         </li>
         <li class="nav-item">
+          <a href="{{ url_for('odinstudygroup') }}" class="nav-link">The Odin Project Study Group</a>
+        </li>
+        <li class="nav-item">
           <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
         </li>
         <li class="nav-item">
