--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202205</td>
+              <td>2022 MAY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_May_2022.pdf') }}" target="_blank">The Hexagon May 2022</a></td>
+            </tr>
+            <tr>
               <td>202204</td>
               <td>2022 APRIL</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_April_2022.pdf') }}" target="_blank">The Hexagon April 2022</a></td>
