The Hexagon June and July 2022

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,16 @@
         </thead>
         <tbody>
             <tr>
+              <td>202207</td>
+              <td>2022 JULY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2022.pdf') }}" target="_blank">The Hexagon July 2022</a></td>
+            </tr>
+            <tr>
+              <td>202206</td>
+              <td>2022 JUNE</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_June_2022.pdf') }}" target="_blank">The Hexagon June 2022</a></td>
+            </tr>
+            <tr>
               <td>202205</td>
               <td>2022 MAY</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_May_2022.pdf') }}" target="_blank">The Hexagon May 2022</a></td>
