The Hexagon August 2022

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202208</td>
+              <td>2022 AUGUST</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_August_2022.pdf') }}" target="_blank">The Hexagon August 2022</a></td>
+            </tr>
+            <tr>
               <td>202207</td>
               <td>2022 JULY</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2022.pdf') }}" target="_blank">The Hexagon July 2022</a></td>
